# Smart-Loan-Approval-env

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: loan_env.py
graders/: grader.py
server/: app.py
tasks/: tasks.py
